--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "api-npm": "^1.0.0",
     "booru": "^0.4.0",
     "bufferutil": "^3.0.5",
+    "canvas": "^2.0.0-alpha.12",
     "crowdin": "^1.0.0",
     "discord.js": "^11.3.2",
     "discord.js-lavalink": "^2.0.2",
@@ -36,13 +37,16 @@
     "googleapis": "^31.0.2",
     "i18next": "^11.3.2",
     "i18next-node-fs-backend": "^1.0.0",
+    "mal-scraper": "^2.4.2",
     "mathjs": "^4.4.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "mongoose": "^5.1.5",
     "node-opus": "^0.3.0",
     "node-spotify-api": "^1.0.7",
-    "pretty-ms": "^3.2.0",
+    "request": "^2.87.0",
+    "rss-parser": "latest",
+    "samp-query": "latest",
     "snekfetch": "^4.0.2",
     "transform-props": "^1.0.1",
     "uws": "^10.148.0"
